--- a/debug/src/main/res/layout/fragment_utp_test.xml
+++ b/debug/src/main/res/layout/fragment_utp_test.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="8dp"
     tools:context=".UtpTestFragment">
 
     <LinearLayout
@@ -31,9 +32,12 @@
 
             <Switch
                 android:id="@+id/IPv_ToggleSwitch"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleX="2"
+                android:scaleY="2"
+                android:layout_marginBottom="10dp"
+                android:layout_marginLeft="35dp"
                 android:layout_weight="1"
                 android:checked="false"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
@@ -89,9 +93,12 @@
 
             <Switch
                 android:id="@+id/DAOToggleSwitch"
-                android:layout_width="100dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:layout_marginLeft="35dp"
+                android:scaleX="2"
+                android:scaleY="2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
         </LinearLayout>
 
@@ -157,8 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center"
-            android:text="TextBox"
-            android:textSize="34sp" />
+            android:textSize="20sp" />
     </ScrollView>
 
 
