--- a/debug/src/main/res/layout/fragment_utp_test.xml
+++ b/debug/src/main/res/layout/fragment_utp_test.xml
@@ -15,7 +15,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="105dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -34,12 +34,12 @@
                 android:id="@+id/IPv_ToggleSwitch"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:scaleX="2"
-                android:scaleY="2"
-                android:layout_marginBottom="10dp"
                 android:layout_marginLeft="35dp"
+                android:layout_marginBottom="10dp"
                 android:layout_weight="1"
                 android:checked="false"
+                android:scaleX="2"
+                android:scaleY="2"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
         </LinearLayout>
@@ -78,7 +78,7 @@
         android:orientation="horizontal">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="105dp"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
@@ -111,7 +111,9 @@
                 android:id="@+id/DAOSpinner"
                 android:layout_width="match_parent"
                 android:layout_height="48dp"
-                android:layout_marginTop="32dp" />
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="8dp"
+                android:padding="8dp"/>
 
             <EditText
                 android:id="@+id/editDAOText"
