add onclick listener and allow for creation of peer components dynamically

--- a/debug/src/main/res/layout/fragment_utp_test.xml
+++ b/debug/src/main/res/layout/fragment_utp_test.xml
@@ -104,8 +104,7 @@
             android:id="@+id/peerComponent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout="@layout/peer_component">
-
+            layout="@layout/peer_component">
         </include>
 
     </LinearLayout>
