--- a/debug/src/main/res/layout/peer_component.xml
+++ b/debug/src/main/res/layout/peer_component.xml
@@ -36,7 +36,7 @@
                 android:textStyle="bold"/>
 
             <TextView
-                android:id="@+id/peerID"
+                android:id="@+id/peerIP"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
