--- a/debug/src/main/res/layout/peer_component.xml
+++ b/debug/src/main/res/layout/peer_component.xml
@@ -31,7 +31,7 @@
                 android:id="@+id/peerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Peer Name"
+                android:text="ID:"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textStyle="bold"/>
 
