update sendtolocalhost button to sent to estimatedLan and update logging to work with new ipv8 utp endpoint

--- a/debug/src/main/res/layout/fragment_utp_test.xml
+++ b/debug/src/main/res/layout/fragment_utp_test.xml
@@ -94,15 +94,15 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="500dp">
+        android:layout_height="242dp">
+
         <LinearLayout
             android:id="@+id/peerListLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:gravity="center_vertical"
-            android:padding="0dp">
-        </LinearLayout>
+            android:orientation="vertical"
+            android:padding="0dp"></LinearLayout>
     </ScrollView>
 
     <ScrollView
