60 update information page (#66)
* Add data to info screen

* Add support for updating the count when other people vote

* Add support for updating the count when the user places a vote

--- a/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
+++ b/freedomOfComputing/src/main/res/layout/activity_main_foc.xml
@@ -117,7 +117,8 @@
     <include
         android:id="@+id/debugLayout"
         layout="@layout/fragment_debugging"
-        android:visibility="gone" />
+        android:visibility="gone"
+        tools:visibility="visible" />
 
     <include
         android:id="@+id/popUpLayout"
