--- a/eurotoken/src/main/res/layout/fragment_request_money.xml
+++ b/eurotoken/src/main/res/layout/fragment_request_money.xml
@@ -53,6 +53,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/txtRequestData" />
 
+            <Button
+                android:id="@+id/btn_nfc_request"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tap via NFC (Test)"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/qr"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
