--- a/eurotoken/src/main/res/layout/fragment_send_money.xml
+++ b/eurotoken/src/main/res/layout/fragment_send_money.xml
@@ -187,6 +187,16 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/addContactSwitch" />
 
+            <Button
+                android:id="@+id/btn_nfc_send"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Listen via NFC (Test)"
+                android:layout_marginTop="16dp"
+                app:layout_constraintTop_toBottomOf="@id/newContactName"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
